src/main/kotlin/com/example/quizler/quizler/spring/invalidquestion/dto/InvalidQuestionDto.kt
package com.example.quizler.quizler.spring.invalidquestion.dto

data class InvalidQuestionDto(
    val questionId: String = "",
    val reportTypeId: String = "",
)